--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 		<p class="prod-note">*Harga yang yang tertera adalah jika anda memesan sesuai tiap gambar diatas, untuk desain atau permintaan khusus Anda harga dapat berubah teragantung bahan dan isian.</p>
-	</div>
+	</div>6
 
 	<div class="order-box" id="order">
 		<h1>Order</h1>
@@ -146,8 +146,9 @@
 
   
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/index.js"></script>
-	<script src="js/order.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
+<script src="js/index.js"></script>
+<script src="js/order.js"></script>
 
     <script>
 		let orderArray = []
