--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/responsive.css"/>
-	<!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
+	<link rel="stylesheet" href="fontawesome/css/all.css">
 
 	<script src="https://kit.fontawesome.com/b9a9bf6e53.js" crossorigin="anonymous"></script>
 	<title>Mister Shop (Buket & Ritel)</title>
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 		<p class="prod-note">*Harga yang yang tertera adalah jika anda memesan sesuai tiap gambar diatas, untuk desain atau permintaan khusus Anda harga dapat berubah teragantung bahan dan isian.</p>
-	</div>6
+	</div>
 
 	<div class="order-box" id="order">
 		<h1>Order</h1>
@@ -145,10 +145,10 @@
 	</div>
 
   
-    <script src="js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>    
-<script src="js/index.js"></script>
-<script src="js/order.js"></script>
+    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
+	<script src="js/order.js"></script>
 
     <script>
 		let orderArray = []
