--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/responsive.css"/>
 	<link rel="stylesheet" href="fontawesome/css/all.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
-	<script src="https://kit.fontawesome.com/b9a9bf6e53.js" crossorigin="anonymous"></script>
+	<!-- <script src="https://kit.fontawesome.com/b9a9bf6e53.js" crossorigin="anonymous"></script> -->
 	<title>Mister Shop (Buket & Ritel)</title>
 
-</head> 
+</head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light" id="navbar">
 		<div class="container-fluid navigasi">
@@ -146,18 +146,19 @@
 	</div>
 
   
-    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
     <script src="js/index.js"></script>
 	<script src="js/order.js"></script>
 
     <script>
+		document.querySelectorAll('.nav-text').forEach( a => {
+				a.style.color = 'white'
+		})
+
 		let orderArray = []
 
 		window.addEventListener('load', function(e) {
-			document.querySelectorAll('.nav-text').forEach( a => {
-				a.style.color = 'white'
-			})
 			daftarOrder()
 		})
 
