--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/responsive.css"/>
-	<!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
+	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 	<script src="https://kit.fontawesome.com/b9a9bf6e53.js" crossorigin="anonymous"></script>
@@ -59,12 +59,12 @@
 			<div class="box buket-box">
 			
 			</div>
+		<p class="prod-note">*Harga yang yang tertera adalah jika anda memesan sesuai tiap gambar diatas, untuk desain atau permintaan khusus Anda harga dapat berubah teragantung bahan dan isian.</p>
 
 			<h1>Ritel</h1>
 			<div class="box ritel-box">
 			</div>
 		</div>
-		<p class="prod-note">*Harga yang yang tertera adalah jika anda memesan sesuai tiap gambar diatas, untuk desain atau permintaan khusus Anda harga dapat berubah teragantung bahan dan isian.</p>
 	</div>
 
 	<div class="order-box" id="order">
@@ -103,21 +103,21 @@
 		<h3>Hubungi Kami di :</h3>
 		<div class="kontak-box">
 			<div class="kontak-konten">
-				<a href="" class="kontak-link">
+				<a href="https://wa.me/+6281354741823?text=Hallo admin Mister Shop.\n" class="kontak-link">
 					<img src="asset/png/wa.svg" alt="">
-					<p class="wa">0808080808080</p>
+					<p class="wa">081248877156</p>
 				</a>
 			</div>
 			<div class="kontak-konten">
 				<a href="" class="kontak-link">
 					<img src="asset/png/ig.svg" alt="">
-					<p class="ig">@misterShop17</p>
+					<p class="ig">@mister.shop17</p>
 				</a>
 			</div>
 			<div class="kontak-konten">
-				<a href="" class="kontak-link">
+				<a href="tel:081248877156" class="kontak-link">
 					<img src="asset/png/telp.svg" alt="">
-					<p class="telp">0808080808080</p>
+					<p class="telp">081248877156</p>
 				</a>
 			</div>
 		</div>
@@ -146,7 +146,7 @@
 	</div>
 
   
-    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
+    <script src="js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 	<script src="js/order.js"></script>
@@ -202,7 +202,6 @@
 				jikaKosong(e.target)
 			}
 		})
-
     </script>
 </body>
 </html>
