--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </nav>
     
 	<header>
-		<img class="header-bg" src="asset/logo.jpg" alt="" />
+		<div class="header-bg"></div>
 		<img class="header-logo" src="asset/logo.jpg" alt="" />
 		<h2>Mister Shop</h2>
 		<h5>Buket & Ritel</h5>
