--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </nav>
     
 	<header>
-		<div class="header-bg"></div>
 		<img class="header-logo" src="asset/logo.jpg" alt="" />
+		<img class="header-bg" src="asset/logo.jpg" alt="" />
 		<h2>Mister Shop</h2>
 		<h5>Buket & Ritel</h5>
 		<p class="header-text">
