--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/responsive.css"/>
 
-
+	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<script src="https://kit.fontawesome.com/b9a9bf6e53.js" crossorigin="anonymous"></script>
 	<title>Mister Shop (Buket & Ritel)</title>
 
@@ -68,6 +67,11 @@
 		</div>
 	</div>
 
+
+	<div id="tambah-sukses">
+        <p>Item telah ditambahkan. Masukan jumlah item pada <a href="#order">daftar order</a></p>
+    </div>
+	
 	<div class="order-box" id="order">
 		<h1>Order</h1>
 		<p></p>
@@ -80,8 +84,9 @@
 			<ol class="order-pilih">
 				
 			</ol>
+            <i class="i">*masukan jumlah sesuai yang diinginkan</i>
 			<span class="total-harga"></span>
-
+			<br>
 			<textarea name="desc" id="order-deskripsi" class="order-input" placeholder="Masukkan Deskripsi orderan Anda, atau jika anda memiliki permintaan tertentu (khusus buket), silahkan masukan disini" required></textarea>
 
 			<div class="bayar-box">
