--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 </head>
 <body>
+	<div class="animasi" id="animasi"></div>
+	
     <nav class="navbar navbar-expand-md navbar-light" id="navbar">
 		<div class="container-fluid navigasi">
 			<a class="navbar-brand nav-text" href="#">MISTER SHOP</a>
@@ -105,7 +107,7 @@
 
 
 
-	<div class="kontak">
+	<div class="kontak" id="kontak">
 		<h3>Hubungi Kami di :</h3>
 		<div class="kontak-box">
 			<div class="kontak-konten">
@@ -115,7 +117,7 @@
 				</a>
 			</div>
 			<div class="kontak-konten">
-				<a href="" class="kontak-link">
+				<a href="https://instagram.com/mister.shop17?utm_medium=copy_link" class="kontak-link">
 					<img src="asset/png/ig.svg" alt="">
 					<p class="ig">@mister.shop17</p>
 				</a>
