--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 		<p class="header-text">
 			Menawarkan pilihan buket menarik dan menerima orderan desain buket sesuai keinginan anda. Tersedia juga Tas menarik dengan pilihan warna yang cantik dan ukuran yang bervariasi membuat penampilan jadi lebih menarik.
 		</p>
+		<a class="header-button" href="#order">ORDER</a>
+		<br>
 		<span>(Layanan hanya untuk daerah Pulau Ambon)</span>
-		<a class="header-butt" href="#order">O r d e r</a>
 	</header>
     
 	<div class="contentBox" id="produk">
@@ -111,9 +112,9 @@
 		<h3>Hubungi Kami di :</h3>
 		<div class="kontak-box">
 			<div class="kontak-konten">
-				<a href="https://wa.me/+6281354741823?text=Hallo admin Mister Shop.\n" class="kontak-link">
+				<a href="https://wa.me/+6281248677156?text=Hallo admin Mister Shop.\n" class="kontak-link">
 					<img src="asset/png/wa.svg" alt="">
-					<p class="wa">081248877156</p>
+					<p class="wa">081248677156</p>
 				</a>
 			</div>
 			<div class="kontak-konten">
@@ -123,9 +124,9 @@
 				</a>
 			</div>
 			<div class="kontak-konten">
-				<a href="tel:081248877156" class="kontak-link">
+				<a href="tel:081248677156" class="kontak-link">
 					<img src="asset/png/telp.svg" alt="">
-					<p class="telp">081248877156</p>
+					<p class="telp">081248677156</p>
 				</a>
 			</div>
 		</div>
